--- a/GroupBuyApp/templates/create.html
+++ b/GroupBuyApp/templates/create.html
@@ -1,15 +1,15 @@
 ﻿<html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<link rel="shortcut icon" href="images/favicon.ico">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="shortcut icon" href="static/images/favicon.ico">
+		<link rel="stylesheet" href="static/css/style.css">
 		<title>GroupBuy</title>
 	</head>
 <body>
 <div class="page">
 	<header>
-	<a href="profile.html"><img alt="" src="images/prof.png"></a>
-	<a href="listBuy.html"><img alt="" src="images/list.png"></a>
+	<a href="profile.html"><img alt="" src="static/images/prof.png"></a>
+	<a href="listBuy.html"><img alt="" src="static/images/list.png"></a>
 	<div class="header-img-home"></div>
 	</header>
 	
