--- a/GroupBuyApp/templates/listBuy.html
+++ b/GroupBuyApp/templates/listBuy.html
@@ -1,38 +1,49 @@
-﻿<html>
+﻿{% load staticfiles  %}
+<html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<link rel="shortcut icon" href="images/favicon.ico">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="shortcut icon" href="{% static 'images/favicon.ico'%}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
 		<title>GroupBuy</title>
 	</head>
 <body>
 <div class="page">
 	<header>
-	<a href="create.html"><img alt="" src="images/new.png"></a>
-	<a href="profile.html" class="prof"><img alt="" src="images/prof.png"></a>
+	<a href="/create.html"><img alt="" src="{% static 'images/new.png' %}"></a>
+	<a href="/profile.html" class="prof"><img alt="" src="{% static 'images/prof.png' %}"></a>
 	<div class="header-img-home"></div>
 	</header>
 
 	<div class="content-box">
+
 		<div class="cont">Список закупок</div>
-		<div class="img-with-capt">
-			<img src="images/buy.jpg"/>
-		</div>
-		<div class="text-left">
-			 "Название"<br> 	
-			 Количество участников: 
-			 
-			<br>	
-			 Минимальное: 
-			 
-			<br>	
-			 Максимальное: 
-			 
-			<br>
-			<input type="button" value="Присоединиться" class="buttonCreate"><br>
-		</div>
+        {% for lot in lots %}
+            <div>
+            <div class="img-with-capt">
+                <img src="{% static 'images/buy.jpg' %}"/>
+            </div>
+            <div class="text-left">
+                 "{{ lot.name }}"<br>
+                 Количество участников:
+
+                <br>
+                 Минимальное: {{ lot.minUsers }}
+
+                <br>
+                 Максимальное: {{ lot.maxUsers }}
+
+                <br>
+                 Цена: {{ lot.price }}
+
+                <br>
+
+                <input type="button" value="Присоединиться" class="buttonCreate"><br>
+            </div>
+            </div>
+        {% endfor %}
 	</div>
-	
+
+
 	<footer class="site-footer">
 		<div class="copyrights"><p>lukin_gorlischeva_krasikov</p></div>
 	</footer>
