--- a/GroupBuyApp/templates/profile.html
+++ b/GroupBuyApp/templates/profile.html
@@ -1,22 +1,22 @@
 ﻿<html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<link rel="shortcut icon" href="images/favicon.ico">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="shortcut icon" href="static/images/favicon.ico">
+		<link rel="stylesheet" href="static/css/style.css">
 		<title>GroupBuy</title>
 	</head>
 <body>
 <div class="page">
 	<header>
-	<a href="create.html"><img alt="" src="images/new.png"></a>
-	<a href="listBuy.html"><img alt="" src="images/list.png"></a>
+	<a href="create.html"><img alt="" src="static/images/new.png"></a>
+	<a href="listBuy.html"><img alt="" src="static/images/list.png"></a>
 	<div class="header-img-home"></div>
 	</header>
 
 	<div class="content-box">
 		<div class="cont">Профиль</div>
 		<div class="foto">
-			<img src="images/customer.jpg"/>
+			<img src="static/images/customer.jpg"/>
 		</div>
 		<div class="box-text text-left">
 			Баланс: 
