Some changes in pages

--- a/GroupBuyApp/templates/create.html
+++ b/GroupBuyApp/templates/create.html
@@ -7,9 +7,10 @@
 	</head>
 <body>
 <div class="page">
-	<header>
-	<a href="profile.html"><img alt="" src="static/images/prof.png"></a>
-	<a href="listBuy.html"><img alt="" src="static/images/list.png"></a>
+	<header
+	<a href="/login.html"><img alt="" src="{% static/images/out.png %}"></a>
+	<a href="/profile.html"><img alt="" src="{% static/images/prof.png %}"></a>
+	<a href="/listBuy.html"><img alt="" src="{% static/images/list.png %}"></a>
 	<div class="header-img-home"></div>
 	</header>
 	
