--- a/GroupBuyApp/templates/profile.html
+++ b/GroupBuyApp/templates/profile.html
@@ -8,8 +8,9 @@
 <body>
 <div class="page">
 	<header>
-	<a href="create.html"><img alt="" src="static/images/new.png"></a>
-	<a href="listBuy.html"><img alt="" src="static/images/list.png"></a>
+	<a href="/login.html"><img alt="" src="{% static/images/out.png %}"></a>
+	<a href="/create.html"><img alt="" src="{% static/images/new.png %}"></a>
+	<a href="/listBuy.html"><img alt="" src="{% static/images/list.png %}"></a>
 	<div class="header-img-home"></div>
 	</header>
 
