--- a/GroupBuyApp/templates/buyInfo.html
+++ b/GroupBuyApp/templates/buyInfo.html
@@ -1,4 +1,4 @@
-﻿{% load staticfiles  %}
+{% load staticfiles  %}
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -13,27 +13,31 @@
 	<a href="/login.html"><img alt="" src="{% static/images/out.png %}"></a>
 	<a href="/create.html"><img alt="" src="{% static 'images/new.png' %}"></a>
 	<a href="/profile.html" class="prof"><img alt="" src="{% static 'images/prof.png' %}"></a>
+	<a href="/listBuy.html"><img alt="" src="{% static/images/list.png %}"></a>
 	<div class="header-img-home"></div>
 	</header>
 
 	<div class="content-box">
 
-		<div class="cont">Список закупок</div>
-        {% for lot in lots %}
-            <div>
-            <div class="img-with-capt">
-                <img src="{% static 'images/buy.jpg' %}"/>
-            </div>
-            <div class="text-left">
-                 "{{ lot.name }}" <br>
-                 Цена: {{ lot.price }} <br>
-
-                <input type="button" value="Перейти к закупке" class="buttonCreate"><br>
-            </div>
-            </div>
-        {% endfor %}
+		<div class="cont">Информация о закупке</div>
+		<div class="img-with-capt">
+			<img src="{% static 'images/buy.jpg' %}"/>
+		</div>
+		<div class="text-left">
+			 "{{ lot.name }}"<br>
+			 Количество участников:
+			 <br>
+			 Минимальное: {{ lot.minUsers }}<br>
+			 Максимальное: {{ lot.maxUsers }}
+			 <br>
+			 Цена: {{ lot.price }}<br>
+			<input type="button" value="Присоединиться" class="buttonCreate">
+			
+			<!-- if autor-->
+			<input type="button" value="Завершить" class="buttonCreate">
+			<input type="button" value="Удалить" class="buttonCreate">
+		</div>
 	</div>
-
 
 	<footer class="site-footer">
 		<div class="copyrights"><p>lukin_gorlischeva_krasikov</p></div>
