--- a/GroupBuyApp/templates/profile.html
+++ b/GroupBuyApp/templates/profile.html
@@ -1,4 +1,5 @@
-﻿<html>
+﻿{% load staticfiles  %}
+<html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link rel="shortcut icon" href="static/images/favicon.ico">
