--- a/GroupBuyApp/templates/buyInfo.html
+++ b/GroupBuyApp/templates/buyInfo.html
@@ -10,10 +10,10 @@
 <body>
 <div class="page">
 	<header>
-	<a href="/login.html"><img alt="" src="{% static/images/out.png %}"></a>
-	<a href="/create.html"><img alt="" src="{% static 'images/new.png' %}"></a>
-	<a href="/profile.html" class="prof"><img alt="" src="{% static 'images/prof.png' %}"></a>
-	<a href="/listBuy.html"><img alt="" src="{% static/images/list.png %}"></a>
+	<a href="/login"><img alt="" src="{% static 'images/out.png' %}"></a>
+	<a href="/create"><img alt="" src="{% static 'images/new.png' %}"></a>
+	<a href="/profile" class="prof"><img alt="" src="{% static 'images/prof.png' %}"></a>
+	<a href="/listBuy"><img alt="" src="{% static 'images/list.png' %}"></a>
 	<div class="header-img-home"></div>
 	</header>
 
