--- a/GroupBuyApp/templates/create.html
+++ b/GroupBuyApp/templates/create.html
@@ -9,9 +9,9 @@
 <body>
 <div class="page">
 	<header
-	<a href="/login.html"><img alt="" src="{% static/images/out.png %}"></a>
-	<a href="/profile.html"><img alt="" src="{% static/images/prof.png %}"></a>
-	<a href="/listBuy.html"><img alt="" src="{% static/images/list.png %}"></a>
+	<a href="/login.html"><img alt="" src="{% static 'images/out.png' %}"></a>
+	<a href="/profile.html"><img alt="" src="{% static 'images/prof.png' %}"></a>
+	<a href="/listBuy.html"><img alt="" src="{% static 'images/list.png' %}"></a>
 	<div class="header-img-home"></div>
 	</header>
 	
