--- a/GroupBuyApp/templates/listBuy.html
+++ b/GroupBuyApp/templates/listBuy.html
@@ -10,26 +10,25 @@
 <body>
 <div class="page">
 	<header>
-	<a href="/login.html"><img alt="" src="{% static/images/out.png %}"></a>
+	<a href="/login.html"><img alt="" src="{% static 'images/out.png' %}"></a>
 	<a href="/create.html"><img alt="" src="{% static 'images/new.png' %}"></a>
 	<a href="/profile.html" class="prof"><img alt="" src="{% static 'images/prof.png' %}"></a>
 	<div class="header-img-home"></div>
 	</header>
 
 	<div class="content-box">
-
 		<div class="cont">Список закупок</div>
         {% for lot in lots %}
             <div>
-            <div class="img-with-capt">
-                <img src="{% static 'images/buy.jpg' %}"/>
-            </div>
-            <div class="text-left">
-                 "{{ lot.name }}" <br>
-                 Цена: {{ lot.price }} <br>
-
-                <input type="button" value="Перейти к закупке" class="buttonCreate"><br>
-            </div>
+                <div class="img-with-capt">
+                    <img src="{% static 'images/buy.jpg' %}"/>
+                </div>
+                <div class="text-left">
+                     "{{ lot.name }}" <br>
+                     Цена: {{ lot.price }} <br>
+                    <a href="/lot?id={{lot.id}}"><input type="button" value="Перейти к закупке" class="buttonCreate"></a>
+                    <br>
+                </div>
             </div>
         {% endfor %}
 	</div>
