--- a/GroupBuyApp/templates/create.html
+++ b/GroupBuyApp/templates/create.html
@@ -8,7 +8,7 @@
 	</head>
 <body>
 <div class="page">
-	<header
+	<header>
 	<a href="/login.html"><img alt="" src="{% static 'images/out.png' %}"></a>
 	<a href="/profile.html"><img alt="" src="{% static 'images/prof.png' %}"></a>
 	<a href="/listBuy.html"><img alt="" src="{% static 'images/list.png' %}"></a>
