--- a/GroupBuyApp/templates/login.html
+++ b/GroupBuyApp/templates/login.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<link rel="shortcut icon" href="static/images/favicon.ico">
-		<link rel="stylesheet" href="static/css/style.css">
+		<link rel="shortcut icon" href="{% static 'images/favicon.ico'%}">
+		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 		<title>GroupBuy</title>
 	</head>
 <body>
