--- a/GroupBuyApp/templates/buyInfo.html
+++ b/GroupBuyApp/templates/buyInfo.html
@@ -10,9 +10,13 @@
 <body>
 <div class="page">
 	<header>
-	<a href="/login"><img alt="" src="{% static 'images/out.png' %}"></a>
-	<a href="/create"><img alt="" src="{% static 'images/new.png' %}"></a>
-	<a href="/profile" class="prof"><img alt="" src="{% static 'images/prof.png' %}"></a>
+	{% if user %}
+        <a href="/logout"><img alt="" src="{% static 'images/out.png' %}"></a>
+	    <a href="/create"><img alt="" src="{% static 'images/new.png' %}"></a>
+         <a href="/profile?id={{ user.id }}" class="prof"><img alt="" src="{% static 'images/prof.png' %}">{{ user.username }}</a>
+    {% else %}
+        <li><a href="/login">Войти</a></li>
+    {% endif %}
 	<a href="/listBuy"><img alt="" src="{% static 'images/list.png' %}"></a>
 	<div class="header-img-home"></div>
 	</header>
