--- a/GroupBuyApp/templates/profile.html
+++ b/GroupBuyApp/templates/profile.html
@@ -9,9 +9,14 @@
 <body>
 <div class="page">
 	<header>
-	<a href="/login.html"><img alt="" src="{% static 'images/out.png' %}"></a>
-	<a href="/create.html"><img alt="" src="{% static 'images/new.png' %}"></a>
-	<a href="/listBuy.html"><img alt="" src="{% static 'images/list.png' %}"></a>
+	{% if user %}
+        <a href="/logout"><img alt="" src="{% static 'images/out.png' %}"></a>
+	    <a href="/create"><img alt="" src="{% static 'images/new.png' %}"></a>
+         <a href="/profile?id={{ user.id }}" class="prof"><img alt="" src="{% static 'images/prof.png' %}">{{ user.username }}</a>
+    {% else %}
+        <li><a href="/login">Войти</a></li>
+    {% endif %}
+    <a href="/listBuy"><img alt="" src="{% static 'images/list.png' %}"></a>
 	<div class="header-img-home"></div>
 	</header>
 
@@ -21,10 +26,10 @@
 			<img src=" {% static 'images/customer.jpg'%}"/>
 		</div>
 		<div class="box-text text-left">
-			Баланс: 
+			Баланс: {{ account.cash }}
 			<input type="button" value="Пополнить" class="button"><br>
-			Репутация:<br>
-			Совершенные покупки:<br>
+			Репутация: {{ account.rate }}<br>
+			Совершенные покупки: <br>
 		</div>
 	</div>
 	
