--- a/GroupBuyApp/templates/buyInfo.html
+++ b/GroupBuyApp/templates/buyInfo.html
@@ -10,12 +10,12 @@
 <body>
 <div class="page">
 	<header>
-	{% if user %}
+	{% if user.is_authenticated %}
         <a href="/logout"><img alt="" src="{% static 'images/out.png' %}"></a>
 	    <a href="/create"><img alt="" src="{% static 'images/new.png' %}"></a>
          <a href="/profile?id={{ user.id }}" class="prof"><img alt="" src="{% static 'images/prof.png' %}">{{ user.username }}</a>
     {% else %}
-        <li><a href="/login">Войти</a></li>
+        <a href="/login"><img alt="" src="{% static 'images/prof.png' %}"></a>
     {% endif %}
 	<a href="/listBuy"><img alt="" src="{% static 'images/list.png' %}"></a>
 	<div class="header-img-home"></div>
@@ -35,11 +35,19 @@
 			 Максимальное: {{ lot.maxUsers }}
 			 <br>
 			 Цена: {{ lot.price }}<br>
-			<input type="button" value="Присоединиться" class="buttonCreate">
-			
-			<!-- if autor-->
+            {% if user.is_authenticated and lot.account_id != user.id %}
+                <form action="/join/?id={{ lot.id }}&joined={{ joined }}" method="post">
+                    {% if joined %}
+			            <input type="button" value="Отказаться" class="buttonCreate">
+                    {% else %}
+                        <input type="button" value="Присоединиться" class="buttonCreate">
+                    {% endif %}
+                </form>
+			{% endif %}
+			{% if user.is_authenticated and user.id == lot.account_id  %}
 			<input type="button" value="Завершить" class="buttonCreate">
 			<input type="button" value="Удалить" class="buttonCreate">
+            {% endif %}
 		</div>
 	</div>
 
