--- a/GroupBuyApp/templates/create.html
+++ b/GroupBuyApp/templates/create.html
@@ -8,10 +8,14 @@
 	</head>
 <body>
 <div class="page">
-	<header
-	<a href="/login.html"><img alt="" src="{% static 'images/out.png' %}"></a>
-	<a href="/profile.html"><img alt="" src="{% static 'images/prof.png' %}"></a>
-	<a href="/listBuy.html"><img alt="" src="{% static 'images/list.png' %}"></a>
+	<header>
+	{% if user.is_authenticated %}
+        <a href="/logout"><img alt="" src="{% static 'images/out.png' %}"></a>
+	    <a href="/create"><img alt="" src="{% static 'images/new.png' %}"></a>
+         <a href="/profile?id={{ user.id }}" class="prof"><img alt="" src="{% static 'images/prof.png' %}">{{ user.username }}</a>
+    {% else %}
+        <a href="/login"><img alt="" src="{% static 'images/prof.png' %}"></a>
+    {% endif %}
 	<div class="header-img-home"></div>
 	</header>
 	
