--- a/GroupBuyApp/templates/listBuy.html
+++ b/GroupBuyApp/templates/listBuy.html
@@ -10,12 +10,12 @@
 <body>
 <div class="page">
 	<header>
-    {% if user %}
+    {% if user.is_authenticated %}
         <a href="/logout"><img alt="" src="{% static 'images/out.png' %}"></a>
 	    <a href="/create"><img alt="" src="{% static 'images/new.png' %}"></a>
          <a href="/profile?id={{ user.id }}" class="prof"><img alt="" src="{% static 'images/prof.png' %}">{{ user.username }}</a>
     {% else %}
-        <li><a href="/login">Войти</a></li>
+        <a href="/login"><img alt="" src="{% static 'images/prof.png' %}"></a>
     {% endif %}
 	<div class="header-img-home"></div>
 	</header>
