--- a/GroupBuyApp/templates/profile.html
+++ b/GroupBuyApp/templates/profile.html
@@ -9,12 +9,12 @@
 <body>
 <div class="page">
 	<header>
-	{% if user %}
+	{% if user.is_authenticated %}
         <a href="/logout"><img alt="" src="{% static 'images/out.png' %}"></a>
 	    <a href="/create"><img alt="" src="{% static 'images/new.png' %}"></a>
          <a href="/profile?id={{ user.id }}" class="prof"><img alt="" src="{% static 'images/prof.png' %}">{{ user.username }}</a>
     {% else %}
-        <li><a href="/login">Войти</a></li>
+        <a href="/login"><img alt="" src="{% static 'images/prof.png' %}"></a>
     {% endif %}
     <a href="/listBuy"><img alt="" src="{% static 'images/list.png' %}"></a>
 	<div class="header-img-home"></div>
